CHANGES
*******

0.15 (unreleased)
=================

- Nothing changed yet.


0.14 (2012-10-30)
=================

- Alex Grönholm added python3 and pypy support.

- Using tox to test on python2.6/2.7/3.2/3.3/pypy.

- Mirroring the bitbucket repo to github in order to run tests on travis-ci:

  https://travis-ci.org/#!/fanstatic/fanstatic

0.14a (2012-10-07)
==================

- Removed the dependency on Paste, replaced with webob.static.

- The publisher no longer sends out etags, which seems like a good
  idea. The `Yahoo best practices for speeding up web sites <http://developer.yahoo.com/performance/rules.html>`_
  say:

    If you're not taking advantage of the flexible validation model that
    ETags provide, it's better to just remove the ETag altogether.

- Updated package setup to be compatible with running
  ``python setup.py test``.

- Added tox setup for testing across python versions.

0.13.3 (2012-09-12)
===================

- No longer use WebOb's wsgify decorator in both the injector and
  delegator middlewares, as it has issues handling parent application
  WSGI response (https://github.com/Pylons/webob/issues/74).

0.13.2 (2012-08-23)
===================

- Fixed issue #78: "fanstatic.checksum.md5 is not guaranteed", thanks to
  takanao ENDOH.

0.13.1 (2012-08-16)
===================

- Fixed bug where mode resources created by string 'shortcut' didn't
  inherit the renderer, bundling, dependency parameters.

0.13 (2012-08-15)
=================

- DummyNeededResources did not takes the slots argument.

- Resource.need() did not process the slots argument, despite the argument
  being documented.

- Added slots argument to Group.need().


0.12 (2012-08-05)
=================

- Documentation fix in code samples, thanks to Toby Dacre.

- Fix issue #74, minified .js not served in bottom unless force_bottom,
  thanks to Toby Dacre.

- Cherry picked pull request #1 "support-wsgi-apps-not-mounted-at-/",
  thanks to Éric Lemoine.
